--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,11 +1,3 @@
-nav{
-    height:100%;
-    width: 15%;
-    border: 1px solid black;
-    background-color: white;
-    float: left;
-}
-
 .body1{
     background-color: grey;
 }
@@ -58,7 +50,7 @@ form
 
 #clave
 {
-    font-size: 55px;
+    font-size: 35px;
     background-color: blue;
     text-align: center;
     width: 60%;
@@ -89,13 +81,14 @@ form
 }
 
 #encriptartexto{
+    position: relative;
     background-color: lightgrey;
     color: black;
     text-align: center;
     width: 25%;
-    height: 100px;
+    height: 150px;
     margin: auto auto;
-    font-size: 70px;
+    font-size: 50px;
     vertical-align: text-top;
     border: 1px solid black;
     padding: 5px 5px;
@@ -130,8 +123,8 @@ form
     background-color: lightgrey;
     color: black;
     text-align: center;
-    width: 25%;
-    height: 150px;
+    width: 30%;
+    height: 170px;
     margin: auto auto;
     font-size: 70px;
     vertical-align: text-top;
@@ -144,9 +137,71 @@ form
 
 .videos
 {
-    text-align: center;
-    width: 50%;
+    text-align: rigth;
+    width: 90%;
     align-items: center;
     margin: 50px 100px;
     justify-content: center;
 }
+
+
+#btn-menu {
+    display: none;      
+}
+
+
+.container-menu{
+    position: absolute;
+    background: rgba(0,0,0,0.5);
+    width:100%;
+    height:200%;
+    top: 0; left: 0; bottom: 0;
+    transition: all 500 ms ease;
+    opacity: 0;
+    visibility: hidden;   
+}
+
+#btn-menu:checked ~ .container-menu {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+.cont-menu{
+    width:100%;
+    max-width: 250px;
+    background: #1c1c1c;
+    height: 100%;
+    position: relative;
+    transition: all 500ms;
+    transform: translateX(-100%);
+}
+
+#btn-menu:checked ~ .container-menu .cont-menu{
+    transform: translateX(0%);
+}
+
+
+.cont-menu .nav-menu a{
+    display: block;
+    text-decoration: none;
+    padding: 20px;
+    color: #c7c7c7;
+    border-left: 5px solid transparent;
+    transition: all 400 ms ease;
+}
+
+.cont-menu .nav-menu a:hover{
+    border-left: 5px solid #c7c7c7;
+    background: 1f1f1f;
+}
+
+.cont-menu label{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+}
+
